tests/error/comptime_expr_errors/unsupported.err
Error: Unsupported Python value (at $FILE:6:20)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     return comptime({1, 2, 3})
  |                     ^^^^^^^^^ Python value of type `<class 'set'>` cannot be used in Guppy

Guppy compilation failed due to 1 previous error
